--- a/index.html
+++ b/index.html
@@ -14,7 +14,30 @@
 </head>
 
 <body>
+ <header>
+  <div class="container">
+    <a href="" class="logo">
+      <img src="./assets/img/logo.svg" alt="logo hostinger">
+    </a>
+    <nav>
+      <ul>
+        <li>
+          <a href="">
+            <img src="./assets/img/icon-help.svg" alt="icone de ajuda">
+            <span>Precisa de ajuda?</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./assets/img/icon-star.svg" alt="icone de ajuda">
+            <span>Teste gratuitamente</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
+ </header>
 </body>
 
 </html>
