--- a/index.html
+++ b/index.html
@@ -14,30 +14,53 @@
 </head>
 
 <body>
- <header>
-  <div class="container">
-    <a href="" class="logo">
-      <img src="./assets/img/logo.svg" alt="logo hostinger">
-    </a>
-    <nav>
-      <ul>
-        <li>
-          <a href="">
-            <img src="./assets/img/icon-help.svg" alt="icone de ajuda">
-            <span>Precisa de ajuda?</span>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./assets/img/icon-star.svg" alt="icone de ajuda">
-            <span>Teste gratuitamente</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
+  <header>
+    <div class="container">
+      <a href="" class="logo">
+        <img src="./assets/img/logo.svg" alt="logo hostinger">
+      </a>
+      <nav>
+        <ul>
+          <li>
+            <a href="">
+              <img src="./assets/img/icon-help.svg" alt="icone de ajuda">
+              <span>Precisa de ajuda?</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./assets/img/icon-star.svg" alt="icone de ajuda">
+              <span>Teste gratuitamente</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
- </header>
+  </header>
+
+  <section class="s-hero">
+    <div class="container">
+      <div class="text">
+        <h1>Ferramenta de em-mail perfeita para sua empresa</h1>
+        <p>Aproveite o potencial do e-mail marketing para ganhar vendas e
+          fortalecer seu relacionamento com os clientes.
+        </p>
+        <button>Teste grauitamente</button>
+        <div class="conheca">
+          <div class="icon">
+            <img src="./assets/img/icon-arrow.svg" alt="icone seta baixo">
+          </div>
+          <span>Conhença os cursos</span>
+        </div>
+      </div>
+
+      <div class="image">
+        <img src="./assets/img/ilustra.svg" alt="Ilustração da section hero">
+      </div>
+
+    </div>
+  </section>
 </body>
 
 </html>
