--- a/index.html
+++ b/index.html
@@ -61,6 +61,57 @@
 
     </div>
   </section>
+
+  <section class="s-resources">
+    <div class="container">
+      <div class="top">
+        <h2>Conheça os recursos da ferramenta de e-mail marketing Kinghost</h2>
+        <p> Mais de 5.000 mil empresas que utilizam. </p>
+      </div>
+      <div class="content">
+        <div class="card-feactured">
+          <div class="icon">
+            <img src="./assets/img/icone-alcance.svg" alt="icon alcance">
+          </div>
+          <div class="info">
+            <h4>Alcance mais </h4>
+            <p>Aumente o tráfego do seu site e suas vendas utilizando o e-mail marketing.</p>
+          </div>
+        </div>
+        <ul>
+          <li>
+            <div class="icon">
+              <img src="./assets/img/icone-gaste-menos.svg" alt="icon gaste menos">
+            </div>
+            <div class="info">
+              <h4>Gaste menos </h4>
+              <p>Com a ferramenta você faz envios em massa, gastante menos de R$10 por mensagem</p>
+            </div>
+          </li>
+          <li>
+            <div class="icon">
+              <img src="./assets/img/icone-autonomia.svg" alt="icon gaste menos">
+            </div>
+            <div class="info">
+              <h4>Autonomia e resultados</h4>
+              <p>Crie lista de contatos, campanhas e ainda analise o resultado de cada envio</p>
+            </div>
+          </li>
+          <li>
+            <div class="icon">
+              <img src="./assets/img/icon-templates.svg" alt="icon gaste menos">
+            </div>
+            <div class="info">
+              <h4>Templates King</h4>
+              <p>Modelos produtos para cada tipo de e-mail: newsletter, lançamento, campanha de vendase outros</p>
+            </div>
+          </li>
+
+
+        </ul>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
