--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=PT+Sans:wght@700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/main.min.css">
+  <link rel="icon" type="image/icon" href="./assets/img/favicon.png">
   <title>Ladingpage hostinger</title>
 </head>
 
